added great leaders headings

--- a/git-stash-reset/src/App.css
+++ b/git-stash-reset/src/App.css
@@ -36,3 +36,6 @@
     transform: rotate(360deg);
   }
 }
+body{
+background-image: url(https://images.alphacoders.com/668/thumb-1920-668184.jpg);
+}
